force-app-eal/main/eal/objects/EAL_LoggerConfig__mdt/EAL_LoggerConfig__mdt.object-meta.xml
<CustomObject>
    <description
  >Manages whether the logger saves custom logs and where to save.</description>
    <label>EAL_LoggerConfig</label>
    <pluralLabel>EAL_LoggerConfigs</pluralLabel>
</CustomObject>