force-app-eal/main/eal/objects/EAL_LoggerConfig__mdt/fields/DateFormat__c.field-meta.xml
<CustomField>
    <fullName>DateFormat__c</fullName>
    <description>DateFormat of the timestamp on the logger</description>
    <inlineHelpText>DateFormat of the timestamp on the logger</inlineHelpText>
    <label>Date Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yyyy-MM-dd'T'HH:mm:ss.SSS z</fullName>
                <default>true</default>
                <label>yyyy-MM-dd'T'HH:mm:ss.SSS z</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>