force-app-eal/main/eal/objects/EAL_LoggerConfig__mdt/fields/LoggerObject__c.field-meta.xml
<CustomField>
    <fullName>LoggerObject__c</fullName>
    <description>API Name of Custom Logger Object</description>
    <inlineHelpText>API Name of Custom Logger Object</inlineHelpText>
    <label>Logger Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>EAL_LoggerConfigs</relationshipLabel>
    <relationshipName>EAL_LoggerConfigs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>