force-app-eal/main/eal/objects/EAL_LoggerConfig__mdt/fields/LoggerObjectName__c.field-meta.xml
<CustomField>
  <fullName>LoggerObjectName__c</fullName>
  <description>API Name of Name Field on Custom Logger Object</description>
  <inlineHelpText
  >API Name of Name Field on Custom Logger Object</inlineHelpText>
  <label>Logger Object : Name</label>
  <metadataRelationshipControllingField
  >EAL_LoggerConfig__mdt.LoggerObject__c</metadataRelationshipControllingField>
  <referenceTo>FieldDefinition</referenceTo>
  <relationshipLabel>EAL_LoggerConfigs</relationshipLabel>
  <relationshipName>EAL_LoggerConfigs</relationshipName>
  <type>MetadataRelationship</type>
</CustomField>