force-app-eal/main/eal/objects/EAL_LoggerConfig__mdt/fields/LoggerObjectTimestamp__c.field-meta.xml
<CustomField>
  <fullName>LoggerObjectTimestamp__c</fullName>
  <description>API Name of Timestamp Field on Custom Logger Object</description>
  <inlineHelpText
  >API Name of Timestamp Field on Custom Logger Object</inlineHelpText>
  <label>Logger Object : Timestamp</label>
  <metadataRelationshipControllingField
  >EAL_LoggerConfig__mdt.LoggerObject__c</metadataRelationshipControllingField>
  <referenceTo>FieldDefinition</referenceTo>
  <relationshipLabel>EAL_LoggerConfigs_Timestamp</relationshipLabel>
  <relationshipName>EAL_LoggerConfigs_Timestamp</relationshipName>
  <type>MetadataRelationship</type>
</CustomField>