force-app-eal/main/eal/objects/EAL_LoggerConfig__mdt/fields/MaxLength__c.field-meta.xml
<CustomField>
    <fullName>MaxLength__c</fullName>
    <description>Max Length of Log Message on the logger</description>
    <inlineHelpText
  >Do not exceed the length of Log Message Field on Custom Logger Object</inlineHelpText>
    <label>Max Length</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>