force-app-eal/main/eal/objects/EAL_LoggerConfig__mdt/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>Timezone on the logger</description>
    <inlineHelpText>Timezone on the logger</inlineHelpText>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia/Sydney</fullName>
            </value>
            <value>
                <fullName>Asia/Tokyo</fullName>
                <default>true</default>
                <label>Asia/Tokyo</label>
            </value>
            <value>
                <fullName>Asia/Shanghai</fullName>
            </value>
            <value>
                <fullName>Asia/Kolkata</fullName>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>